--- a/rag_llm.ipynb
+++ b/rag_llm.ipynb
@@ -3254,21 +3254,21 @@
     "\n",
     "1 - Положительный \n",
     "- Я построил RAG систему 😄\n",
-    "- Получил опыт работы с наиболее популярными бибилиотеками для работы с LLM (langchain, llama_index)\n",
+    "- Получил опыт работы с наиболее популярными библиотеками для работы с LLM (langchain, llama_index)\n",
     "- Интегрировал и настроил векторную базу данных (Weaviate)\n",
     "- Поработал с моделью - Qwen-2.5\n",
     "\n",
     "2 - То на что стоит обратить внимание\n",
     "- В приведённом коде достаточно, много всяких рычажков, которые можно покрутить))\n",
-    "    - Настройки llm (тепература, top-k, top-p)\n",
-    "    - Настройки поисковика (Дополнительно опробовать алгоритмы поиска связанные с деревьями, хешированием)\n",
+    "    - Настройки llm (температура, top-k, top-p)\n",
+    "    - Настройки поисковика (Дополнительно опробовать алгоритмы поиска, связанные с деревьями, хешированием)\n",
     "    - Настроить и покрутить промпт\n",
     "\n",
     "- В потенциальном развитии возможно расширить RAG добавив:\n",
     "    - Классификатор вопросов\n",
     "    - Маршрутизатор\n",
     "    - Агентную систему\n",
-    "    - Добавить возмождность сверять вопрос и ответ с помощью Cross-Encoder или Bi-Encoder\n",
+    "    - Добавить возможность сверять вопрос и ответ с помощью Cross-Encoder или Bi-Encoder\n",
     "\n",
     "*Часть из этих затей планируется опробовать в других проектах*"
    ]
